# weaver-aspherix

./: .gitignore  README.md  cspell.json  pyproject.toml
.claude/: CLAUDE.md
docs/: AUTHORING_GUIDE.md  DEFERRED-WEAVER-CHANGES.md  PROFILE.md  aspherix-wrapper-plan.md  authoring-models.md  authoring-operators.md  authoring-stages.md  authoring-tests.md  study-json-reference.md
src/weaver/aspherix/: __init__.py  assets.py  errors.py  operators.py  orchestrators.py  preflight.py  render.py  results.py  run.py  solver.py  stages.py  steps.py  template.py
src/weaver/aspherix/operators/: __init__.py  build.py
src/weaver/aspherix/orchestrators/: __init__.py  run.py
tests/: asx_util.py  conftest.py  test_assets.py  test_operators.py  test_preflight.py  test_render.py  test_results.py  test_run.py  test_solver.py  test_stages.py  test_steps.py  test_template.py  test_wiring.py
tests/fixtures/: basic.asx  walled_box.asx
tests/fixtures/study/projects/: demo.json
tests/fixtures/study/system/: demo.system.json
tests/fixtures/study/system/operators/: aspherix.json
tests/fixtures/study/system/orchestrators/: aspherix_run.json
